--- a/src/App.css
+++ b/src/App.css
@@ -3,19 +3,15 @@
 }
 
 .App-logo {
-  animation: App-logo-spin infinite 20s linear;
+  animation: App-logo-spin infinite 1s cubic-bezier(0, 1, 1, 0);
   height: 80px;
 }
 
 .App-header {
   background-color: #222;
   height: 150px;
-  padding: 20px;
-  color: white;
-}
-
-.App-intro {
-  font-size: large;
+  padding: 5px;
+  color: #61DAFB;
 }
 
 @keyframes App-logo-spin {
